--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
     <link rel="stylesheet" href="./style.css">
     <body>
         <div class="container">
+            <h1>Relájate hermanito republicano</h1>
             <div class="circle"></div>
+            <div class="gradient-circle"></div>
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
